# muxo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CNAME  README.md  alembic.ini  index.html  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
backend/: auth.py  campaign_watcher.py  db.py  main.py  maintenance.py  models.py  utils.py
backend/devices/: serial_port.py
backend/sms/: pdu.py  receiver.py  sender.py  store.py
ui/: .eslintrc.cjs  index.html  package-lock.json  package.json
ui/src/: App.tsx  CampaignWizard.tsx  ContactsPage.tsx  DeviceDashboard.tsx
website/: index.html  script.js  styles.css
