[project]
name = "muxo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pyserial",
    "SQLAlchemy",
    "alembic",
    "apscheduler",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "phonenumbers",
    "requests",
    "watchdog",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
